--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,9 +34,7 @@
             <a class="px-4 py-1 font-semibold text-gray-800 hover:text-green-500" href="#">Главная</a>
             <%= link_to 'Отделения', departments_path, class:"px-4 py-1 font-semibold text-gray-800 hover:text-green-500" %>
             <%= link_to 'Сотрудники', employees_path, class:"px-4 py-1 font-semibold text-gray-800 hover:text-green-500" %>
-            
-            <a class="px-4 py-1 font-semibold text-gray-800 hover:text-green-500" href="#">Сертификаты</a>
-            
+            <%= link_to 'Сертификаты', certificates_path, class:"px-4 py-1 font-semibold text-gray-800 hover:text-green-500" %>
           </nav>
         </aside>
         <main class="flex-1 bg-gray-100 p-4">
