--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -89,19 +89,42 @@ button.active {
   } 
 
 .btn-circle {
-  /* color: #FFF; */
-  /* padding: 6px; */
   border-radius: 35%;
-  /* background-color: #95ccff !important; */
   transition: all 0.2s linear !important;
 }
 
 .btn-circle:hover {
-  /* color: #FFF; */
-  /* font-weight: 400; */
-  /* padding: 6px; */
   border-radius: 50%;
-  /* background-color: rgb(252 211 77); */
   box-shadow: 0px 10px 10px -3px rgba(0,0,0,0.1);
   transition: all 0.2s linear !important;
+}
+
+.menuButton {
+  position: relative;
+  transition-property: background-color, color;
+  transition-duration: 1s;
+  transition-timing-function: ease-out;
+  text-align: left;
+  background-color: grey;
+  left: 5px;
+  top: 5px;
+  height: 26px;
+  color: white;
+  border-color: black;
+  font-family: sans-serif;
+  font-size: 20px;
+  text-decoration: none;
+  box-shadow: 2px 2px 1px black;
+  padding: 2px 4px;
+  border: solid 1px black;
+}
+
+.menuButton:hover {
+  position: relative;
+  transition-property: background-color, color;
+  transition-duration: 1s;
+  transition-timing-function: ease-out;
+  background-color:white;
+  color:black;
+  box-shadow: 2px 2px 1px black;
 }
