--- a/app/views/certificates/_form.html.erb
+++ b/app/views/certificates/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: certificate, class: "contents") do |form| %>
+<%= form_with(model: [@employee, @certificate], local: true, class: "contents") do |form| %>
   <% if certificate.errors.any? %>
     <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
       <h2><%= pluralize(certificate.errors.count, "error") %> prohibited this certificate from being saved:</h2>
