--- a/app/views/employee_positions/_employee_position.html.erb
+++ b/app/views/employee_positions/_employee_position.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id employee_position %>" class="flex w-full my-2 rounded-lg border items-center px-3 py-2 bg-white">
 
   <div class="flex-auto basis-1/3">
-    <%= link_to employee_position.position.name, [@employee, employee_position], data: { turbo_frame: "_top" } %>
+    <%= link_to employee_position.position.name.capitalize, [@employee, employee_position], data: { turbo_frame: "_top" } %>
   </div>
   <div class="flex-auto basis-1/3">
     <%= link_to employee_position.position.department.name.capitalize, employee_position.position.department, data: { turbo_frame: "_top" } %>
