--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -65,7 +65,21 @@
             <i class="fa-solid fa-plus font-bold"></i>
           <% end %>
         </div>
-        <%= render @certificates %>
+
+          <div class="table border-collapse border w-full rounded-lg">
+            <div class="table-header-group">
+              <div class="table-row bg-gray-100 text-xs">
+                <div class="table-cell text-left px-5 py-3 font-semibold">Номер запроса</div>
+                <div class="table-cell text-left px-5 py-3 font-semibold">Ссылка на запрос</div>
+                <div class="table-cell text-left px-5 py-3 font-semibold">Дата окончания</div>
+                <div class="table-cell text-left px-5 py-3 font-semibold">Статус</div>
+                <div class="table-cell text-left px-5 py-3 font-semibold">Сервис</div>
+                <div class="table-cell text-left px-5 py-3 font-semibold">ЮЛ</div>
+                <div class="table-cell text-right px-5 py-3"></div>
+              </div>
+            </div>
+            <%= render @certificates %>
+          </div>
       </div>
 
       <div class="tab-content-item p-5 fade-in w-full" data-tabs-target="tabContentItem" data-tab-id="3" hidden>
