--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -60,12 +60,12 @@
       </div>
 
       <div class="tab-content-item p-5 fade-in" data-tabs-target="tabContentItem" data-tab-id="2" hidden>
-        <div class="flex p-5">
+        <div class="flex justify-center p-5">
           <%= link_to new_employee_certificate_path(@employee), data: { turbo_frame: 'modal' }, class: "rounded-lg btn-circle py-2 px-3 bg-green-500 text-white " do %>
             <i class="fa-solid fa-plus font-bold"></i>
           <% end %>
         </div>
-
+        <% if @certificates.present? %>
           <div class="table border-collapse border w-full rounded-lg">
             <div class="table-header-group">
               <div class="table-row bg-gray-100 text-xs">
@@ -80,10 +80,13 @@
             </div>
             <%= render @certificates %>
           </div>
+          <% else %>
+          <h1>Нет сертификатов</h1>
+          <% end %>
       </div>
 
       <div class="tab-content-item p-5 fade-in w-full" data-tabs-target="tabContentItem" data-tab-id="3" hidden>
-        <div class="flex p-5">
+        <div class="flex justify-center p-5">
           <%= link_to new_employee_employee_position_path(@employee), data: { turbo_frame: 'modal' }, class: "rounded-lg btn-circle py-2 px-3 bg-green-500 text-white " do %>
             <i class="fa-solid fa-plus font-bold"></i>
           <% end %>
