--- a/app/views/certificates/_form.html.erb
+++ b/app/views/certificates/_form.html.erb
@@ -12,41 +12,42 @@
   <% end %>
 
   <div class="my-5">
-    <%= form.label :legal_entity %>
-    <%= form.check_box :legal_entity, class: "block mt-2 h-5 w-5" %>
+    <%= form.label "ЮЛ", class:"font-semibold text-sm" %>
+    <%= form.check_box :legal_entity, class: "block h-5 w-5" %>
   </div>
 
-  <div class="my-5">
-    <%= form.label :request_number %>
-    <%= form.text_field :request_number, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+  <div class="flex flex-row gap-3">
+    <div class="my-3 w-1/3">
+      <%= form.label "Номер запроса", class:"font-semibold text-sm" %>
+      <%= form.text_field :request_number, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 w-full" %>
+    </div>
+    <div class="my-3 w-2/3">
+      <%= form.label "Ссылка на запрос", class:"font-semibold text-sm" %>
+      <%= form.text_field :request_link, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 w-full" %>
+    </div>
   </div>
 
-  <div class="my-5">
-    <%= form.label :request_link %>
-    <%= form.text_field :request_link, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+  <div class="flex flex-row gap-3">
+    <div class="my-3 w-1/3">
+      <%= form.label "Дата окончания", class:"font-semibold text-sm" %>
+      <%= form.date_field :end_date, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 w-full" %>
+    </div>
+    <div class="my-3 w-1/3">
+      <%= form.label "Статус", class:"font-semibold text-sm" %>
+      <%= form.text_field :status, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 w-full" %>
+    </div>
+    <div class="my-3 w-1/3">
+      <%= form.label "Сервис", class:"font-semibold text-sm" %>
+      <%= form.text_field :e_service, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 w-full" %>
+    </div>
   </div>
 
-  <div class="my-5">
-    <%= form.label :end_date %>
-    <%= form.date_field :end_date, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
-  </div>
-
-  <div class="my-5">
-    <%= form.label :status %>
-    <%= form.text_field :status, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
-  </div>
-
-  <div class="my-5">
-    <%= form.label :e_service %>
-    <%= form.text_field :e_service, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
-  </div>
-
-  <div class="my-5">
+  <div class="my-5" hidden>
     <%= form.label :employee_id %>
     <%= form.text_field :employee_id, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
 
   <div class="inline">
-    <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
+    <%= form.submit "Добавить", class: "rounded-lg py-2 px-3 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
   </div>
 <% end %>
