--- a/app/views/certificates/edit.html.erb
+++ b/app/views/certificates/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="mx-auto md:w-2/3 w-full">
   <h1 class="font-bold text-4xl">Editing certificate</h1>
 
-  <%= render "form", certificate: @certificate %>
+  <%= render "shared/modal", model: @certificate, title: "Изменение сертификата" %>
 
 </div>
