--- a/app/views/certificates/new.html.erb
+++ b/app/views/certificates/new.html.erb
@@ -1,7 +1,7 @@
 <div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">New certificate</h1>
-
-  <%= render "form", certificate: @certificate %>
-
-  <%= link_to 'Back to certificates', certificates_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+  <fieldset class="border border-solid shadow rounded-lg border-gray-300 p-5">
+    <legend class="font-bold px-3">Добавление сертификата</legend>
+    <%= render "shared/modal", model: @certificate, title: "Добавление сертификата" %>
+    <%= link_to 'Back to certificates', certificates_path, class: "ml-2 rounded-lg py-2 px-3 bg-gray-100 inline-block font-medium" %>
+  <fieldset>
 </div>
