--- a/app/views/departments/new.html.erb
+++ b/app/views/departments/new.html.erb
@@ -1,4 +1,6 @@
 <div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-2xl">New department</h1>
-    <%= render "shared/modal", model:@department, title: "Добавление отделения" %>
+  <fieldset class="border border-solid shadow rounded-lg border-gray-300 p-5">
+    <legend class="font-bold px-3">Добавление отделения</legend>
+      <%= render "shared/modal", model:@department, title: "Добавление отделения" %>
+  </fieldset>
 </div>
