--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -1,10 +1,12 @@
 <%= turbo_frame_tag "modal" do %>
   <div class="modal-full" data-controller="modal" data-action="turbo:submit-end->modal#submitEnd">
     <div class="modal-background w-full" data-action="click->modal#hideModal"></div>
-    <div class="modal mx-auto p-5 bg-gray-100 rounded-lg border w-2/4 animated fadeIn">
-      <h1 class="font-bold text-2xl"><%= title %></h1>
-      <%= render "form", "#{model.class.name.downcase}": model %>
-      <%= button_tag "Отмена", data: { action: "modal#hideModal" }, type: "button", class: "ml-2 rounded-lg py-2 px-3 bg-white inline-block font-medium" %>
+    <div class="modal mx-auto p-5 bg-gray-100 rounded-lg border w-2/4 animated fade-in">
+      <fieldset class="border border-solid shadow rounded-lg border-gray-300 p-5">
+        <legend class="font-bold"><%= title %></legend>
+        <%= render "form", "#{model.class.name.downcase}": model %>
+        <%= button_tag "Отмена", data: { action: "modal#hideModal" }, type: "button", class: "ml-2 rounded-lg py-2 px-3 bg-white inline-block font-medium" %>
+      </fieldset>
     </div>
   </div>
 <% end %>
