--- a/app/views/certificates/_certificate_all.html.erb
+++ b/app/views/certificates/_certificate_all.html.erb
@@ -2,15 +2,14 @@
 
   <div class="table border-collapse border w-full rounded-lg">
     <div class="table-header-group">
-      <div class="table-row bg-gray-100 text-xs">
-        <div class="table-cell text-left px-5 py-3 font-semibold">ФИО</div>
-        <div class="table-cell text-left px-5 py-3 font-semibold">Номер запроса</div>
-        <div class="table-cell text-left px-5 py-3 font-semibold">Ссылка на запрос</div>
-        <div class="table-cell text-left px-5 py-3 font-semibold">Дата окончания</div>
-        <div class="table-cell text-left px-5 py-3 font-semibold">Статус</div>
-        <div class="table-cell text-left px-5 py-3 font-semibold">Сервис</div>
-        <div class="table-cell text-left px-5 py-3 font-semibold">ЮЛ</div>
-        <div class="table-cell text-right px-5 py-3"></div>
+      <div class="table-row bg-gray-100 text-xs font-bold">
+        <div class="table-cell text-left px-5 py-3">ФИО</div>
+        <div class="table-cell text-left px-5 py-3">Номер запроса</div>
+        <div class="table-cell text-left px-5 py-3">Ссылка на запрос</div>
+        <div class="table-cell text-left px-5 py-3">Дата окончания</div>
+        <div class="table-cell text-left px-5 py-3">Статус</div>
+        <div class="table-cell text-left px-5 py-3">Сервис</div>
+        <div class="table-cell text-left px-5 py-3">ЮЛ</div>
       </div>
     </div>
 
@@ -21,7 +20,13 @@
         <div class="table-cell px-5 py-3"><%= certificate.request_number %></div>
         <div class="table-cell break-all px-5 py-3"><%= certificate.request_link %></div>
         <div class="table-cell px-5 py-3"><%= certificate.end_date %></div>
-        <div class="table-cell px-5 py-3"><%= certificate.status %></div>
+        <div class="table-cell px-5 py-3">
+          <div clas="flex gap justify-content-center">
+            <%= button_to "add", employee_certificate_path(certificate, certificate:{ status: "черновик" }), class: "btn px-2 py-1 #{ certificate.status == "черновик" ? certificate.status_class : "text-red-400" }", title: "черновик", method: :patch %>
+          
+          </div>
+          <%= certificate.status %>
+        </div>
         <div class="table-cell px-5 py-3"><%= certificate.e_service %></div>
         <div class="table-cell px-5 py-3"><%= certificate.legal_entity %></div>
       </div>
