--- a/app/views/certificates/_form.html.erb
+++ b/app/views/certificates/_form.html.erb
@@ -34,7 +34,7 @@
     </div>
     <div class="my-3 w-1/3">
       <%= form.label "Статус", class:"font-semibold text-sm" %>
-      <%= form.text_field :status, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 w-full" %>
+      <%= form.select :status, status_for_select, {}, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 w-full" %>
     </div>
     <div class="my-3 w-1/3">
       <%= form.label "Сервис", class:"font-semibold text-sm" %>
