--- a/app/views/certificates/_certificate_all.html.erb
+++ b/app/views/certificates/_certificate_all.html.erb
@@ -18,12 +18,15 @@
       <div class="table-row border-b even:bg-gray-100 border-gray-100">
         <div class="table-cell px-5 py-3"><%= certificate.employee.name_with_initial %></div>
         <div class="table-cell px-5 py-3"><%= certificate.request_number %></div>
-        <div class="table-cell break-all px-5 py-3"><%= certificate.request_link %></div>
+        <div class="table-cell max-w-sm break-all px-5 py-3"><%= certificate.request_link %></div>
         <div class="table-cell px-5 py-3"><%= certificate.end_date %></div>
         <div class="table-cell px-5 py-3">
-          <div clas="flex gap justify-content-center">
-            <%= button_to "add", employee_certificate_path(certificate.employee_id, certificate, certificate:{ status: "черновик" }), class: "border bg-gray-600 px-2 py-1 #{ certificate.status == "черновик" ? certificate.status_class : "text-red-400" }", title: "черновик", method: :patch %>
-          
+          <div clas="flex">
+            <% status_for_select.each do |status| %>
+            <div class="grow">
+              <%= button_to "add", employee_certificate_path(certificate.employee_id, certificate, certificate:{ status: status }), class: "border bg-gray-600 px-2 py-1 #{ certificate.status == status ? certificate.status_class : "text-red-400" }", title: status, method: :patch %>
+            </div>
+            <% end %>
           </div>
           <%= certificate.status %>
         </div>
@@ -33,3 +36,4 @@
     <% end %>
   </div>
 </div>
+
