--- a/app/views/certificates/index.html.erb
+++ b/app/views/certificates/index.html.erb
@@ -4,7 +4,7 @@
   <% end %>
 
   <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Certificates</h1>
+    <h1 class="font-bold text-stone-700 text-3xl">Сертификаты</h1>
   </div>
 
   <div class="mb-3"> <!-- Certificates import -->
