--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,6 +24,10 @@
   border-radius: 8px;
  }
 
+.button_to {
+  display: inline-block;
+}
+
  .modal {
   background-color: #FFF;
   position: absolute;
