attributes for active admin

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,7 +60,7 @@
         </div>
         <div class="flex flex-row items-center">
           <nav class="flex flex-row">
-            <a class="px-4 font-semibold text-gray-800 hover:text-green-500" href="#">Link 1</a>
+            <%= link_to "Панель администратора", admin_root_path, class:"px-4 font-semibold text-gray-800 hover:text-green-500" %>
             <a class="px-4 font-semibold text-gray-800 hover:text-green-500" href="#">Link 2</a>
             <a class="px-4 font-semibold text-gray-800 hover:text-green-500" href="#">Link 3</a>
           </nav>
