--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,23 @@
           <% end %>
         </div>
       </header>
+      
+      <% if notice.present? || alert.present?%>
+        <div class="bg-indigo-900 text-center py-4 lg:px-4" data-controller="hide">
+          <div class="px-5 py-2 bg-indigo-800 items-center text-indigo-100 leading-none lg:rounded-full flex lg:inline-flex" role="alert">
+            <span class="flex rounded-full bg-indigo-500 uppercase px-2 py-1 text-xs font-bold mr-3">New</span>
+            <span class="font-semibold mr-2 text-left flex-auto"><%= notice %></span>
+            <span class="font-semibold mr-2 text-left flex-auto"><%= alert %></span>
+            <button type="button" data-action="hide#hide" class=" ml-auto
+                                        text-yellow-100 border-none rounded-none 
+                                        text-2xl flex-auto
+                                        hover:text-yellow-100 hover:opacity-75 hover:no-underline" data-bs-dismiss="alert" aria-label="Close">
+              <i class="fa fa-times" aria-hidden="true"></i>
+            </button>
+          </div>
+        </div>
+      <% end %>
+      
       <div class="flex flex-row h-full">
         <aside class="bg-gray-100 w-300px py-4">
           <nav class="flex flex-col">
