--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
       </header>
       
       <% if notice.present? || alert.present?%>
-        <div class="bg-indigo-900 text-center py-4 lg:px-4" data-controller="hide">
+        <div class="bg-indigo-900 text-center transition easy-in-out py-4 lg:px-4" data-controller="hide">
           <div class="px-5 py-2 bg-indigo-800 items-center text-indigo-100 leading-none lg:rounded-full flex lg:inline-flex" role="alert">
             <span class="flex rounded-full bg-indigo-500 uppercase px-2 py-1 text-xs font-bold mr-3">New</span>
             <span class="font-semibold mr-2 text-left flex-auto"><%= notice %></span>
