--- a/app/views/departments/_form.html.erb
+++ b/app/views/departments/_form.html.erb
@@ -12,11 +12,10 @@
   <% end %>
 
   <div class="my-5">
-    <%= form.label :name %>
     <%= form.text_field :name, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
 
   <div class="inline">
-    <%= form.submit class: "rounded-lg py-2 px-3 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
+    <%= form.submit "Добавить", class: "rounded-lg py-2 px-3 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
   </div>
 <% end %>
