--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -1,7 +1,7 @@
 <div class="w-full">
 
   <div class="flex justify-between items-center">
-    <h3 class="font-bold text-2xl">Employees</h3>
+    <h3 class="font-bold text-2xl">Список сотрудников</h3>
     <div class="flex p-5">
       <%= link_to new_employee_path, data: { turbo_frame: 'modal' }, class: "rounded-lg btn-circle py-2 px-3 bg-green-500 text-white " do %>
         <i class="fa-solid fa-plus font-bold"></i>
