--- a/app/views/personal_data/new.html.erb
+++ b/app/views/personal_data/new.html.erb
@@ -1,5 +1,5 @@
 <div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">Персональные данные</h1>
+  <h1 class="font-bold text-center text-2xl">Персональные данные</h1>
 
   <%= render "form", personal_datum: @personal_datum %>
 
