--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -66,9 +66,9 @@
           <% end %>
         </div>
         <% if @certificates.present? %>
-          <div class="table border-collapse border w-full rounded-lg">
+          <div class="table border-collapse border-t-gray-50 border w-full rounded-lg">
             <div class="table-header-group">
-              <div class="table-row bg-gray-100 text-xs">
+              <div class="table-row border bg-gradient-to-t from-gray-100 to-gray-200 text-xs">
                 <div class="table-cell text-left px-5 py-3 font-semibold">Номер запроса</div>
                 <div class="table-cell text-left px-5 py-3 font-semibold">Ссылка на запрос</div>
                 <div class="table-cell text-left px-5 py-3 font-semibold">Дата окончания</div>
