--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -1,7 +1,11 @@
 <div class="w-2/4">
   <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Отделения</h1>
-    <%= link_to 'Добавить', new_department_path, data: { turbo_frame: 'modal' }, class: "rounded-lg py-1 px-3 bg-blue-600 text-white block font-medium" %>
+    <h1 class="font-bold text-2xl mb-3">Список отделений</h1>
+    <div class="flex justify-center mb-3">
+      <%= link_to new_department_path, data: { turbo_frame: 'modal' }, class: "rounded-lg btn-circle py-2 px-3 bg-green-500 text-white " do %>
+        <i class="fa-solid fa-plus font-bold"></i>
+      <% end %>
+    </div>
   </div>
 
   <div id="departments" class="min-w-full">
