--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <div class="flex flex-col h-screen bg-gray-200">
+    <div class="flex flex-col h-screen bg-gray-50">
       <header class="px-6 flex flex-row items-center justify-between">
         <div class="flex flex-row items-center">
             <span class="px-3"><%= image_tag "logo60.png" %></span>
@@ -56,12 +56,39 @@
       <% end %>
       
       <div class="flex flex-row h-full">
-        <aside class="w-300px py-4">
-          <nav class="flex flex-col">
-            <%= link_to 'Главная', dashboard_url, class:"px-4 py-1 font-semibold hover:text-green-500" %>
-            <%= link_to 'Отделения', departments_path, class:"px-4 py-1 font-semibold hover:text-green-500" %>
-            <%= link_to 'Сотрудники', employees_path, class:"px-4 py-1 font-semibold hover:text-green-500" %>
-            <%= link_to 'Сертификаты', certificates_path, class:"px-4 py-1 font-semibold hover:text-green-500" %>
+        <aside class="w-300px py-4 text-gray-600">
+          <nav class="flex flex-col gap-6">
+            <div class="flex flex-col text-center">
+              <a href="<%= dashboard_path %>" class="px-4 py-1 font-semibold hover:text-green-500">
+                <i class="fa-solid fa-chart-pie text-3xl"></i>
+                </br >
+                Главная
+              </a>
+              
+            </div>
+            <div class="flex flex-col text-center">
+              <a href="<%= departments_path %>" class="px-4 py-1 font-semibold hover:text-green-500">
+                <i class="fa-solid fa-briefcase px-5 text-3xl"></i>
+                </br >
+                Отделения
+              </a>
+            </div>
+            <div class="flex flex-col text-center">
+              <a href="<%= employees_path %>" class="px-4 py-1 font-semibold hover:text-green-500">
+                <i class="fa-solid fa-user-group px-5 text-3xl"></i>
+                </br >
+                Сотрудники
+              </a>
+            </div>
+
+            <div class="flex flex-col text-center">
+              <a href="<%= certificates_path %>" class="px-4 py-1 font-semibold hover:text-green-500">
+                <i class="fa-solid fa-file-contract px-5 text-3xl"></i>
+                </br >
+                Сертификаты
+              </a>
+            </div>
+          
           </nav>
         </aside>
         <main class="flex-1 p-4">
@@ -70,8 +97,8 @@
                       backdrop-blur-lg
                       border border-gray-200
                       p-8
-                      
-                      mx-auto shadow-lg rounded-lg p-6">
+                      mx-auto shadow-lg 
+                      rounded-lg p-6">
             <%= yield %>
           </div>
         </main>
