--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -82,7 +82,7 @@
           <% end %>
       </div>
 
-      <div class="tab-content-item p-5 fade-in w-full" data-tabs-target="tabContentItem" data-tab-id="3" hidden>
+      <div class="tab-content-item p-5 fade-in w-full lg:w-1/2" data-tabs-target="tabContentItem" data-tab-id="3" hidden>
         <div class="flex justify-center p-5">
           <%= link_to new_employee_employee_position_path(@employee), data: { turbo_frame: 'modal' }, class: "rounded-lg btn-circle py-2 px-3 bg-green-500 text-white " do %>
             <i class="fa-solid fa-plus font-bold"></i>
