--- a/app/views/personal_data/_personal_datum.html.erb
+++ b/app/views/personal_data/_personal_datum.html.erb
@@ -72,7 +72,7 @@
     </div>
 
   </div>
-  <hr>
+  <hr class="border-stone-300">
   <div class="italic text-gray-500">edited <%= time_ago_in_words(personal_datum.updated_at) %> ago</div>
 
   <% if action_name != "show" %>
