--- a/app/views/certificates/index.html.erb
+++ b/app/views/certificates/index.html.erb
@@ -3,6 +3,7 @@
   <div class="flex justify-between">
     <div class="flex justify-between items-center">
       <h1 class="font-bold text-stone-700 text-3xl">Сертификаты</h1>
+      <%= link_to "Some Page", certificates_path(Certificate.select_by_draft) %>
     </div>
 
     <div class="mb-3"> <!-- Certificates import -->
